Added get Game route
